# HongoScripts

./: CMakeLists.txt  Readme.mediawiki  createAliasCommands.rb  filesToBeCopied.text  filesToBeProcesses.text  go_rename.sh  go_renameScriptsPreviewAsHTML.sh  initialize.sh  renameScriptsFromBinOldNameToBin.rb  renameScriptsPreviewAsHTML.rb  rename_list.text  setAliasToHongoScriptVersion1Names.sh  sortRenameList.rb
bin_oldName/: _hsXspecCreateSummaryPDFOld2  bin2dec  calc  dec2hex  hsCPMLConverToCPS  hsDSVConnectAllColumns  hsDateMMDD_HHMM  hsDateToMJD  hsDateYYYYMMDD_HHMM  hsFilesExist  hsFitsFoldedLightcurveSubtractBackground  hsFitsGetAreascal  hsFitsGetAreascalMultipleFiles  hsFitsGetCdelt1  hsFitsGetHeader  hsFitsGetObsID  hsFitsGetRAOBJ  hsFitsLightcurveGetBinSize  hsFolderGetCurrentFolderName  hsGSOBarycentricCorrection  hsGSOCreateXCMForSpectralFitting  hsGSOExtractLightcurveWithGTI  hsGSOExtractSpectrumWithGTI  hsGSOGroupSpectrum  hsGetFitsDecNom  hsHXDExtractPseudoEvents  hsHXDReprocess  hsHash  hsHtdigest  hsPDFMergeAllPDF  hsPINCreateFilterCommandsWithEnergyFiltering  hsPINMergeGTI  hsPINSpectrum  hsQDPGetDataIndexFromLogOfInfoCommand  hsShellRenumberFiles  hsSuzakuFovdsp  hsSuzakuPlotPINGSOSpectraSimultaneously  hsSuzakuSearchData  hsSuzakuUTCToMJD  hsTemporaryFile  (+15 more)
documents/: history.text  rename_list.numbers
html/: hsApecCreateSummaryOfApecFiles.html  hsAscii2Postscript.html  hsAsciiTableColumnGetMax.html  hsAsciiTableColumnGetMaxRowNumber.html  hsAstroCalcAngularDistance.html  hsCPMLConverToCPS.html  hsCSVToHTMLTable.html  hsCalculateAverage.html  (+252 more)
(+121 files in other folders)
